# GrottoFinancialsProcessing

./: .env.example  .gitignore  README.md  anonymize.py  categorize.py  charts.py  config.py  docx_export.py  expense_notes.py  fidelity.py  load_data.py  main.py  pdf_export.py  pyproject.toml  report.py  revenue_report.py  transform.py
docs/: General Notes and Info on Investment
docs/output_docs/2026Q1/: 2026_budget_report.docx  2026_budget_report.md
